:bug: fixed hover issue on safari

--- a/src/style/team-members.css
+++ b/src/style/team-members.css
@@ -198,7 +198,7 @@
 
       & .overlay {
         background-color: #042A4A;
-        bottom:0;
+        border-radius: 75px;
         bottom: 0;
         display: flex;
         left: 0;
